--- a/About/Index.htm
+++ b/About/Index.htm
@@ -9,10 +9,10 @@
 <body>
     <div class="navbar-header">
         <div class="navbar-header-items">
-            <a href="..\Index.htm">Home</a>
-            <a href="Index.htm">About</a>
-            <a href="Index.htm">Help</a>
-            <a href="Index.htm" id="apply-now-btn">Apply Now</a>
+            <a href="..\Index.html">Home</a>
+            <a href="Index.html">About</a>
+            <a href="Index.html">Help</a>
+            <a href="Index.html" id="apply-now-btn">Apply Now</a>
         </div>
     </div>
     <div class="page-section-1">
