--- a/About/index.html
+++ b/About/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="navbar-header">
         <div class="navbar-header-items">
-            <a href="..\Index.html">Home</a>
-            <a href="Index.html">About</a>
-            <a href="Index.html">Help</a>
-            <a href="Index.html" id="apply-now-btn">Apply Now</a>
+            <a href="..\index.html">Home</a>
+            <a href="index.html">About</a>
+            <a href="index.html">Help</a>
+            <a href="index.html" id="apply-now-btn">Apply Now</a>
         </div>
     </div>
     <div class="page-section-1">
